@@ -451,7 +451,8 @@ notify_if_multiple_heads(app_state & app)
 void
 process_commit_message_args(bool & given,
                             utf8 & log_message,
-                            app_state & app)
+                            app_state & app,
+                            utf8 message_prefix)
 {
   // can't have both a --message and a --message-file ...
   N(app.message().length() == 0 || app.message_file().length() == 0,
@@ -459,7 +460,7 @@ process_commit_message_args(bool & given,
 
   if (app.is_explicit_option(option::message()))
     {
-      log_message = app.message;
+      log_message = message_prefix() + "\n\n" + app.message();
       given = true;
     }
   else if (app.is_explicit_option(option::msgfile()))
@@ -468,6 +469,12 @@ process_commit_message_args(bool & given,
       read_data_for_command_line(app.message_file(), dat);
       external dat2 = dat();
       system_to_utf8(dat2, log_message);
+      log_message = message_prefix() + "\n\n" + log_message();
+      given = true;
+    }
+  else if (message_prefix().length() != 0)
+    {
+      log_message = message_prefix;
       given = true;
     }
   else
