@@ -1,3 +1,13 @@
+2006-10-26  Richard Levitte  <richard@levitte.org>
+
+	* cmd_ws_commit.cc (CMD(disapprove)): Make it possible to specify
+	extra message lines to be added after the standard "disapprove"
+	line, as well as author and date.  Makes use of the following
+	change:
+	* commands.cc,cmd.hh (process_commit_message_args): Add an extra
+	parameter to have as a prefix of the user message.  If the prefix
+	exists, there will always be a message containing it.
+
 2006-10-24  Timothy Brownawell  <tbrownaw@gmail.com>
 
 	Fix an epoch refinement bug. If we already have an epoch for a branch
